# ML_modules

./: README.md
ML_modules/: pyproject.toml  requirements.txt
ML_modules/usrml/: __init__.py
ML_modules/usrml/ensemble/: __init__.py  ensemble.py
ML_modules/usrml/linear/: __init__.py  linear.py
ML_modules/usrml/metrics/: __init__.py  metrics.py
usrml/: __init__.py
usrml/model_selection/: grid_search.py
usrml/preprocessing/: TfIdfVectorizer.py  __init__.py
usrml/tree/: __init__.py  tree.py
