[project]
name = "usrml"
version = "0.1.0"
description = "Implementation of some basic ML modules"
authors = [
    {name = "Ilia Grachev",email = "igrchv@yandex.ru"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy (>=1.26.4,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.9.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
